实现歌词切换

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -95,6 +95,7 @@ $color-unuse:rgb(60,60,60);
       }
       .lyrics{
         text-align: center;
+        margin-top:24px;
         p{
           font-size:14px;
           color:$color-default;
